--- a/assets/style.css
+++ b/assets/style.css
@@ -21,12 +21,14 @@ h1{
     }
 
     /* Optional: Makes the sample page fill the window. */
-html,
 body {
         height: 100%;
         margin: 0;
         padding: 10px;
+        background-image: url("images/background\ image\ .jpg"); 
+        color: white;
     }
+    
     .card {
         width: 480px;
         margin-bottom: 24px;
@@ -37,5 +39,16 @@ body {
     } 
     
     .left {
-        border-right: solid gray 1px;
+        border-right: solid black 6px;
+    }
+    .jumbotron {
+        border: solid black 6px;
+        background-color: skyblue;
+    }
+    button {
+        background-color: skyblue;
+    }
+    .big {
+        font-size: 80px;
+
     }
