--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,11 @@
 
 
 }
+#directions{
+    position: relative;
+    top: -375px;
+    left: 420px;
+}
 .ink-form{
     float:left;
     width: 50%;
@@ -14,16 +19,23 @@
     text-align: center;
 
 }
+.card-1{
+    color: black;
+}
 h1{
     text-align: center;
     text-decoration:underline;
+    color: white;
+}
+.text{
+    color: white;
 }
 
  /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
 #map {
-        height: 400px;
-        width: 450px;
+        height: 375px;
+        width: 400px;
     }
 
     /* Optional: Makes the sample page fill the window. */
@@ -34,7 +46,7 @@ body {
         padding: 10px;
 
         background-image: url("images/background\ image\ .jpg"); 
-        color: white;
+        color: black;
 
     }
     
